Fixed minor spacing and changed footer text color

--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,7 @@ li a {
     font-family: arial, sans-serif;
   }
 
+
   li a:hover{
       text-decoration: underline;
       color: grey;
@@ -238,4 +239,8 @@ li a {
 .ftr{
     background-color: #f2f2f2;
     border-top: #e4e4e4;
+}
+
+#ftrclr{
+    color:rgb(128, 129, 128)
 }
